karnc/tests/fixtures/negative/135_integration_unwired_dependency/src/it.karn
test integration "x" {
  wires app.cons, app.bystander
  test "t" { let r <- app.cons.run() assert r is Ok(_) }
}
